# CppSharp

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  install.py
.github/workflows/: ci.yml  release.yml
cmake/: utils.cmake
src/: CMakeLists.txt  main.cpp
src/cppsharp/: my_lib.cpp  my_lib.hpp
src/my_lib/: my_lib.cpp
src/mylib/: mylib.cpp  mylib.hpp
tests/: CMakeLists.txt  main_test.cpp
